--- a/benchmarks/dynamo/huggingface.yaml
+++ b/benchmarks/dynamo/huggingface.yaml
@@ -67,6 +67,11 @@ batch_size:
     XGLMForCausalLM: 4
     XLNetLMHeadModel: 2
     YituTechConvBert: 2
+    meta-llama/Llama-3.2-1B: 8
+    google/gemma-2-2b: 8
+    google/gemma-3-4b-it: 8
+    openai/whisper-tiny: 8
+    Qwen/Qwen3-0.6B: 8
 
 
 tolerance:
@@ -98,6 +103,7 @@ accuracy:
       # even for 40 GB machine.
       - DebertaV2ForMaskedLM
       - BlenderbotForCausalLM
+      - google/gemma-3-4b-it
 
 only_inference:
   # Fails with dynamo for train mode
